Devops Assessment/k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels: { kubernetes.io/metadata.name: app }
---
apiVersion: v1
kind: Namespace
metadata:
  name: data
  labels: { kubernetes.io/metadata.name: data }
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels: { kubernetes.io/metadata.name: observability }
